--- a/Assets/Scripts/UI/SettingsMenu.uxml
+++ b/Assets/Scripts/UI/SettingsMenu.uxml
@@ -1,8 +1,8 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" editor-extension-mode="False">
     <Style src="project://database/Assets/Scripts/UI/StyleSheets/Slider.uss?fileID=7433441132597879392&amp;guid=e7f67fb7f7d83e044a3c6fa021ea9bda&amp;type=3#Slider" />
     <ui:VisualElement name="root" style="height: 1440px; width: 2560px; justify-content: center; align-items: center; background-color: rgba(0, 0, 0, 0.5);">
-        <ui:VisualElement name="menu-container" style="flex-direction: column; justify-content: center; position: absolute; height: 220px; width: 936px; top: auto; left: auto; align-items: center; margin-left: 0; min-height: 100%; min-width: 100%;">
-            <ui:Slider picking-mode="Ignore" label="Camera Sensitivity" value="1" high-value="2" name="camsens" low-value="0.1" show-input-field="true" usage-hints="None" tabindex="0" focusable="true" class="slider" style="min-height: 50%; min-width: 50%; max-width: 100%; max-height: 50%; justify-content: center; flex-direction: row; flex-wrap: nowrap; left: 240px; color: rgb(255, 255, 255); font-size: 110px;" />
+        <ui:VisualElement name="menu-container" style="flex-direction: column; justify-content: center; position: absolute; height: 100%; width: 100%; top: auto; left: auto; align-items: center; margin-left: 0; min-height: 100%; min-width: 100%;">
+            <ui:Slider picking-mode="Ignore" label="Camera Sensitivity" value="1" high-value="2" name="camsens" low-value="0.1" show-input-field="true" usage-hints="None" tabindex="0" focusable="true" page-size="0" class="slider" style="min-height: 50%; min-width: 50%; max-width: 100%; max-height: 50%; justify-content: center; flex-direction: row; flex-wrap: nowrap; left: 240px; color: rgb(255, 255, 255); font-size: 110px; height: 1044px; width: 2513px;" />
             <ui:Button text="Save" display-tooltip-when-elided="true" name="save" style="width: 304px; height: 126px; font-size: 48px; -unity-font-style: normal; margin-right: 10px;" />
         </ui:VisualElement>
     </ui:VisualElement>
