--- a/Assets/Scripts/UI/MainMenuNew.uxml
+++ b/Assets/Scripts/UI/MainMenuNew.uxml
@@ -1,9 +1,9 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" editor-extension-mode="False">
-    <ui:VisualElement name="root" style="height: 1100%; width: 100%; justify-content: center; align-items: center; background-color: rgba(0, 0, 0, 0);">
-        <ui:VisualElement name="menu-container" style="flex-direction: row; justify-content: center; position: absolute; height: 100%; width: 100%; top: auto; left: auto; align-items: center; margin-left: 0; padding-top: 853px; padding-left: 802px;">
-            <ui:Button text="Start" display-tooltip-when-elided="true" name="start" style="width: 30%; height: 50%; font-size: 48px; -unity-font-style: normal; margin-right: 20px; margin-left: 20px; margin-top: 0; margin-bottom: 0; padding-left: 0; padding-right: 0; padding-top: 0;" />
-            <ui:Button text="Settings" display-tooltip-when-elided="true" name="settings" style="width: 30%; height: 50%; font-size: 48px; -unity-font-style: normal; margin-right: 20px; margin-top: 0; margin-left: 20px; margin-bottom: 0; padding-left: 0; padding-right: 0; padding-top: 0; padding-bottom: 0;" />
-            <ui:Button text="Quit" display-tooltip-when-elided="true" name="quit" style="width: 30%; height: 50%; font-size: 48px; -unity-font-style: normal; margin-right: 20px; margin-left: 20px; margin-top: 0; margin-bottom: 0; padding-left: 0; padding-right: 0; padding-top: 0; padding-bottom: 0;" />
+    <ui:VisualElement name="root" style="height: 100%; width: 100%; justify-content: flex-end; align-items: flex-end; background-color: rgba(0, 0, 0, 0); flex-shrink: 1; flex-grow: 1; flex-direction: row; align-self: flex-end;">
+        <ui:VisualElement name="menu-container" style="flex-direction: row; justify-content: center; position: absolute; height: 20%; width: 50%; top: auto; left: auto; align-items: center; margin-left: 0; padding-top: 0; padding-left: 0; align-self: flex-end; max-width: none; max-height: none;">
+            <ui:Button text="Start" display-tooltip-when-elided="true" name="start" style="width: 30%; height: 50%; font-size: 20%; -unity-font-style: normal; margin-right: 0; margin-left: 0; margin-top: 0; margin-bottom: 0; padding-left: 0; padding-right: 0; padding-top: 0; padding-bottom: 0;" />
+            <ui:Button text="Settings" display-tooltip-when-elided="true" name="settings" style="width: 30%; height: 50%; font-size: 20%; -unity-font-style: normal; margin-right: 2.5%; margin-top: 0; margin-left: 2.5%; margin-bottom: 0; padding-left: 0; padding-right: 0; padding-top: 0; padding-bottom: 0;" />
+            <ui:Button text="Quit" display-tooltip-when-elided="true" name="quit" style="width: 30%; height: 50%; font-size: 20%; -unity-font-style: normal; margin-right: 20px; margin-left: 0; margin-top: 0; margin-bottom: 0; padding-left: 0; padding-right: 0; padding-top: 0; padding-bottom: 0;" />
         </ui:VisualElement>
     </ui:VisualElement>
 </ui:UXML>
